--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "http://chrysh.github.io/"
+baseURL: "https://blog.christina-quast.de/"
 title: "Linux kernel programming blog"
 languageCode: "en-us"
 theme: "hugo-xmin"
