config.yaml: Add Google Analytics support
Signed-off-by: Christina Quast <contact@christina-quast.de>

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: "https://rust.christina-quast.de/"
 title: "Linux kernel programming blog"
 languageCode: "en-us"
 theme: "hugo-xmin"
+googleAnalytics: "G-VM75BY4RBR"
 
 permalinks:
   note: "/note/:year/:month/:day/:slug/"
